working/kube-prometheus-stack/ValidatingWebhookConfiguration_prometheus-kube-prometheus-admission.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  labels:
    app: kube-prometheus-stack-admission
    app.kubernetes.io/instance: prometheus
    app.kubernetes.io/part-of: kube-prometheus-stack
    app.kubernetes.io/version: 48.2.1
    chart: kube-prometheus-stack-48.2.1
    heritage: Helm
    release: prometheus
  name: prometheus-kube-prometheus-admission
webhooks:
  - admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: prometheus-kube-prometheus-operator
        namespace: prometheus-system
        path: /admission-prometheusrules/validate
    failurePolicy: Ignore
    name: prometheusrulemutate.monitoring.coreos.com
    rules:
      - apiGroups:
          - monitoring.coreos.com
        apiVersions:
          - '*'
        operations:
          - CREATE
          - UPDATE
        resources:
          - prometheusrules
    sideEffects: None
    timeoutSeconds: 10
